
[metadata]
name = zenodo-legacy
version = 1.0.0
description = Zenodo legacy data.
license = MIT
author = CERN
author_email = info@zenodo.org
platforms = any
url = https://github.com/inveniosoftware/zenodo-rdm/legacy
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False

[options.extras_require]
tests =
    pytest-black
    pytest-invenio

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --cov=migrator --cov-report=term-missing
testpaths = tests zenodo_legacy
