
[metadata]
name = zenodo-rdm-migrator
version = 1.0.0
description = ZenodoRDM migrator module.
long_description = file: README.md
license = MIT
author = CERN
author_email = info@zenodo.org
platforms = any
url = https://github.com/inveniosoftware/zenodo-rdm/migrator
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    idutils>=1.2.1
    invenio-rdm-migrator>=4.0.0
    nameparser>=1.1.1
    kafka-python>=2.0.2
    gssapi>=1.8.2
    zenodo-legacy

[options.extras_require]
tests =
    dictdiffer>=0.9.0
    pytest-invenio
    pytest-black

[options.entry_points]
# flask.commands =
#     zenodo-rdm-migrator = zenodo_rdm_migrator.cli:cli

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --cov=zenodo_rdm_migrator --cov-report=term-missing
testpaths = tests zenodo_rdm_migrator
