
[metadata]
name = zenodo-rdm
version = 1.0.0
description = Invenio Research Data Management.
long_description = file: README.rst, CHANGES.rst
keywords = zenodo-rdm Invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/zenodo-rdm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black>=0.3.0
    sphinx>=4.5
    invenio-access>=1.0.0,<2.0.0
    invenio-app>=1.3.4,<2.0.0

[options.entry_points]
invenio_base.blueprints =
    zenodo_rdm_support = zenodo_rdm.views:create_blueprint
invenio_assets.webpack =
    zenodo_rdm_theme = zenodo_rdm.webpack:theme
invenio_config.module =
    zenodo_rdm = zenodo_rdm.config

[bdist_wheel]
universal = 1

[compile_catalog]
directory = zenodo_rdm/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = zenodo_rdm/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = zenodo_rdm/translations/messages.pot
output-dir = zenodo_rdm/translations/

[update_catalog]
input-file = zenodo_rdm/translations/messages.pot
output-dir = zenodo_rdm/translations/

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=zenodo_rdm --cov-report=term-missing
