
[metadata]
name = zenodo-rdm
version = 1.0.0
description = Invenio Research Data Management.
long_description = file: README.rst, CHANGES.rst
keywords = zenodo-rdm Invenio
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/zenodo-rdm
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    github3.py>=3.0.0
    nameparser>=1.1.1
    pyinstrument>=4.5.1
    sqltap>=0.3.11

[options.extras_require]
tests =
    dictdiffer>=0.9.0

[options.entry_points]
flask.commands =
    zenodo-admin = zenodo_rdm.cli:zenodo_admin
invenio_base.blueprints =
    zenodo_rdm_support = zenodo_rdm.views:create_blueprint
    zenodo_rdm_sitemap = zenodo_rdm.sitemap.views:blueprint
invenio_base.apps =
    zenodo_rdm_legacy = zenodo_rdm.legacy.ext:ZenodoLegacy
    zenodo_rdm_sitemap = zenodo_rdm.sitemap.ext:ZenodoSitemap
    profiler = zenodo_rdm.profiler:Profiler
    zenodo_rdm_metrics = zenodo_rdm.metrics.ext:ZenodoMetrics
    invenio_openaire = zenodo_rdm.openaire.ext:OpenAIRE
invenio_base.api_apps =
    zenodo_rdm_legacy = zenodo_rdm.legacy.ext:ZenodoLegacy
    profiler = zenodo_rdm.profiler:Profiler
    zenodo_rdm_metrics = zenodo_rdm.metrics.ext:ZenodoMetrics
    invenio_openaire = zenodo_rdm.openaire.ext:OpenAIRE
invenio_base.api_blueprints =
    zenodo_rdm_legacy = zenodo_rdm.legacy.views:blueprint
    zenodo_rdm_legacy_stub = zenodo_rdm.legacy.views:stub_blueprint
    zenodo_rdm_legacy_records = zenodo_rdm.legacy.views:create_legacy_records_bp
    zenodo_rdm_legacy_draft_files = zenodo_rdm.legacy.views:create_draft_files_bp
    zenodo_rdm_legacy_files_rest = zenodo_rdm.legacy.views:create_files_rest_bp
    zenodo_rdm_metrics = zenodo_rdm.metrics.views:blueprint
invenio_celery.tasks =
    zenodo_rdm_metrics = zenodo_rdm.metrics.tasks
    zenodo_rdm_sitemap = zenodo_rdm.sitemap.tasks
    zenodo_rdm_openaire = zenodo_rdm.openaire.tasks

invenio_assets.webpack =
    zenodo_rdm_theme = zenodo_rdm.webpack:theme
invenio_config.module =
    zenodo_rdm = zenodo_rdm.config
invenio_requests.types =
    legacy_record_upgrade = zenodo_rdm.legacy.requests:LegacyRecordUpgrade
    community_manage_record = zenodo_rdm.legacy.requests:CommunityManageRecord
invenio_access.actions =
    media_files_management_action = zenodo_rdm.generators:media_files_management_action

[bdist_wheel]
universal = 1

[compile_catalog]
directory = zenodo_rdm/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = zenodo_rdm/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = zenodo_rdm/translations/messages.pot
output-dir = zenodo_rdm/translations/

[update_catalog]
input-file = zenodo_rdm/translations/messages.pot
output-dir = zenodo_rdm/translations/

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=zenodo_rdm --cov-report=term-missing
testpaths = tests zenodo_rdm
live_server_scope = module
